Add basic swagger specifications and corresponding controllers
- Update specifications as per requirements
- map specifications with controllers
- make api installable

JIRA: QTIP-220
