# qtip/api/controllers/qpi.py
@@ -8,16 +8,15 @@
 ##############################################################################
 
 import connexion
-import os
-
-swagger_dir = os.path.abspath(os.path.join(os.path.dirname(__file__), 'swagger/'))
 
 
-def main():
-    app = connexion.App(__name__, specification_dir=swagger_dir)
-    app.add_api('swagger.yaml', base_path='/v1.0')
-    app.run(host='0.0.0.0', port='5000')
+def list_qpis():
+    return connexion.problem(501,
+                             'List QPIs',
+                             'QPIs listing not implemented')
 
 
-if __name__ == '__main__':
-    main()
+def get_qpi(name):
+    return connexion.problem(501,
+                             'Get a QPI',
+                             'QPI retrieval not implemented')
